--- a/control
+++ b/control
@@ -1,7 +1,8 @@
 Package: jp.akusio.kernbypass
 Name: KernBypass
 Version: 0.0.4
-Depends: mobilesubstrate, applist, preferenceloader, com.comex.attachanddetach, Firmware(>=12.0)
+Depends: mobilesubstrate, applist, preferenceloader, Firmware(>=12.0), curl
+Conflicts: com.comex.attachanddetach
 Architecture: iphoneos-arm
 Description: kernel level jailbreak detection bypass.
 Depiction: http://akusio.github.io/descriptions/kernbypass/index.html
